Finished Hackwich Seven

--- a/HackwichFive/Base.lproj/Main.storyboard
+++ b/HackwichFive/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="uAJ-SI-or4" kind="show" identifier="mySegue" id="zep-Gc-Dlz"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -71,7 +74,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6wD-7T-rqe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="562.5" y="115.14084507042254"/>
+            <point key="canvasLocation" x="690" y="117"/>
         </scene>
     </scenes>
 </document>
